# GoQuant_Assignment

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: Latency_Benchmarking.md  Optimization_Results.md
docs/: API_Keys_Generation.md  Benchmarking_Methodology.md  Performance_Analysis.md  README.md
include/: Logger.h  MarketDataHandler.h  OrderManager.h  WebSocketServer.h
src/: Logger.cpp  Logger.h  MarketDataHandler.cpp  MarketDataHandler.h  OrderManager.cpp  OrderManager.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
src/utils/: MemoryUtils.cpp  NetworkUtils.cpp  NetworkUtils.h
tests/: MarketDataHandlerTests.cpp  OrderManagerTests.cpp  WebSocketServerTests.cpp
